# Trabalho-CG-Final

./: .gitignore  CMakeLists.txt  README.md  gui_tkinter.py  main.cpp
src/core/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  Light.h  Scene.h
src/math/: Matrix.h  Vector.h
src/pipeline/: Pipeline.cpp  Pipeline.h  Rasterizer.cpp  Rasterizer.h  Shading.cpp  Shading.h  Transform.h
